# start

helixent/: README.md  README.zh.md  eslint.config.js  package.json
helixent/.claude/: settings.json
helixent/src/: index.ts
helixent/src/agent/: agent.ts  tool-result-policy.ts  tool-result-runtime.ts  tool-result-summary.ts
helixent/src/agent/__tests__/: tool-result-policy.test.ts  tool-result-runtime.test.ts
helixent/src/agent/skills/: skills-middleware.ts
helixent/src/agent/todos/: todos.ts  types.ts
helixent/src/cli/: index.tsx
helixent/src/cli/tui/: app.tsx  command-registry.ts
helixent/src/coding/agents/: lead-agent.ts
helixent/src/coding/permissions/: approval-persistence.ts  coding-approval-middleware.ts  index.ts
helixent/src/coding/tools/: tool-result.ts  tool-utils.ts
helixent/src/community/openai/: model-provider.ts  stream-utils.ts  types.ts  utils.ts
helixent/src/foundation/: index.ts
pyhelixent/: .gitignore  AGENTS.md  AGETNS.md  README.md  pyproject.toml
pyhelixent/docs/: architecture.md
pyhelixent/skills/coding-plan/: SKILL.md
pyhelixent/src/pyhelixent/: __init__.py  __main__.py  cli.py
pyhelixent/src/pyhelixent/agent/: __init__.py  agent.py  events.py  middleware.py
pyhelixent/src/pyhelixent/coding/: __init__.py  agent_factory.py  tools.py
pyhelixent/src/pyhelixent/foundation/: __init__.py  messages.py  models.py  tools.py
pyhelixent/src/pyhelixent/skills/: __init__.py  loader.py  middleware.py
pyhelixent/tests/: __init__.py  test_agent.py  test_coding_tools.py  test_skills.py
(+18 files in other folders)
