[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhelixent"
version = "0.1.0"
description = "A compact Python learning implementation of a ReAct-style agent."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "PyHelixent Contributors" }]

[project.scripts]
pyhelixent = "pyhelixent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

